# intellij-deps-java-atk-wrapper

./: Makefile.am  NEWS  README.md  configure.ac
docs/: architecture.md  debugging.md  fork-notes.md
jni/src/: AtkWrapper.c  Makefile.am  jawaction.c  jawcache.h  jawcomponent.c  jaweditabletext.c  jawhyperlink.c  jawhypertext.c  jawimage.c  jawimpl.c  jawobject.c  jawselection.c  jawtable.c  jawtablecell.c  jawtext.c  jawtoplevel.c  jawutil.c  jawutil.h  jawvalue.c
wrapper/: Makefile.am  module-info.java
wrapper/org/GNOME/Accessibility/: AtkAction.java  AtkComponent.java  AtkEditableText.java  AtkHyperlink.java  AtkHypertext.java  AtkImage.java  AtkInterface.java  AtkKeyEvent.java  AtkObject.java  AtkSelection.java  AtkTable.java  AtkTableCell.java  AtkText.java  AtkUtil.java  AtkValue.java  AtkWrapper.java.in  AtkWrapperDisposer.java  Makefile.am
